# gnome_shell_portal_help

./: .gitignore  README.md  meson.build  meson_options.txt
js/: meson.build
js/misc/: meson.build
js/portalHelper/: main.js
reference/js/misc/: fileUtils_42.js
reference/src/: gnome-shell-portal-helper_42.c  gnome-shell-portal-helper_44.c
src/: gnome-shell-portal-helper.c  meson.build
